[project]
name = "dh-auth"
version = "0.1.0"
description = "Microservicio de Autenticación e Identidad para Digital Hospital"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn>=0.46.0",
    "dh-shared",
]

[tool.uv.sources]
dh-shared = { path = "../dh_shared", editable = true }
